# Miden-Zcash

./: .gitignore  CURRENT_FINDINGS_SESSION_2.md  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
miden-browser-wallet/: .env.example  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  webpack-empty-module.js
miden-browser-wallet/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
miden-browser-wallet/components/: background-process.tsx  footer.tsx  navbar.tsx  success-tsx-toast.tsx
miden-browser-wallet/hooks/: use-loading-timeout.ts  useWebRtc.ts
miden-browser-wallet/lib/: actions.ts  code.ts  constants.ts  error.ts  helper.ts  types.ts  utils.ts
miden-browser-wallet/providers/: balance-provider.tsx  receiver-provider.tsx  sdk-provider.tsx  (+3 more)
proving-service/: Cargo.toml
proving-service/src/: main.rs
scripts/: build-prize-wasm.sh  check-node-status.sh  check-sync-status.sh  check-zcash-status.sh  copy-wasm-to-wallet.sh  download-params.sh  download-zcash.sh  fix-imports.cjs  fix-imports.js  fix-sync.sh  health-check.ts  monitor-sync.sh  setup-rpc-key.sh  setup-zcash-node.sh  setup-zcash.sh  smoke-test.ts  start-zcash-docker.sh  test-address-import.sh  verify-prize-wasm.sh  zcash-config.example.ts
src/: index.ts
tests/: groth16.test.ts  keyDerivation.test.ts  keyStorage.test.ts  noteCachePersistence.test.ts  noteDecryption.test.ts  prizeWasm.test.ts  setup.ts  test-nownodes.js  transactionSerializer.test.ts  transactions.test.ts  wasm-integration.test.ts
(+169 files in other folders)
