[package]
name = "zcash-proving-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zcash_primitives = "0.12"
zcash_proofs = { version = "0.12", features = ["local-prover"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
rand_core = "0.6"
jubjub = "0.10"
bls12_381 = "0.8"
group = "0.13"
incrementalmerkletree = "0.4"
